# Novel-Deepfake-Detection

./: .gitignore  evaluate.py  evaluate_robustness.py  pyproject.toml  train.py
config/: __init__.py  compatibility.py  configuration.py  defaults.py  loader.py  paths.py  types.py  validator.py  verify_config.py
data/: __init__.py
data/builders/: __init__.py  dataset_factory.py
data/datasets/: __init__.py  base_dataset.py  fusion_dataset.py  rgb_dataset.py  wavelet_dataset.py  wavelet_rgb_dataset.py
data/loaders/: __init__.py  dataloader_factory.py
data/samplers/: __init__.py  balanced_sampler.py
data/tools/: precompute_wavelets.py
data/transforms/: __init__.py  augmentations.py  resize.py
data/wavelets/: __init__.py  packet_transform.py
evaluation/: __init__.py  checkpoint_loader.py  comparison.py  evaluator.py  inference.py  verify_evaluator.py
evaluation/metrics/: __init__.py  classification.py  performance.py
evaluation/reports/: __init__.py  generator.py
evaluation/visualization/: __init__.py  confusion_matrix.py  gradcam.py  precision_recall.py  roc.py  tsne.py
experiment/: __init__.py  experiment.py  manager.py  verify_experiment.py
experiment/logger/: __init__.py  csv_logger.py  json_logger.py  logger.py
experiment/metrics/: __init__.py  accumulators.py  metrics.py
experiment/utils/: __init__.py  history_loader.py  report.py
experiment/visualization/: __init__.py  compare_runs.py  (+4 more)
models/: __init__.py  registry.py
training/: __init__.py  base_trainer.py  checkpoint_manager.py  optimizer_factory.py  scheduler_factory.py  trainer.py  validator.py  verify_distributed.py  verify_engine.py
(+54 files in other folders)
