[project]
name = "novel-deepfake-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdelrahman", email = "abdelrahmanhassanismail131@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.4",
    "opencv-python>=5.0.0.93",
    "pillow>=12.2.0",
    "pytorch-wavelets>=1.3.0",
    "pywavelets>=1.9.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "tensorboard>=2.21.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.68.3",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
